[package]
name = "color_scaling"
version = "0.1.0"
authors = [ "Boris Faure <boris@fau.re>" ]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/borisfaure/color_scaling.rs/"
description = "Functions to scale colors: get a weighted color between 2 colors"
edition = '2021'


[lib]
name = "color_scaling"
path = "src/lib.rs"

[dependencies]
image = "0.25"
num-traits = "0.2"
